Wacom Intuos 5S no pen pressure on Fedora 30 #68073

Closed
opened 2019-08-01 16:15:35 +02:00 by Martin · 14 comments

System Information
Operating system: Fedora 30 (5.1.20-300.fc30.x86_64)
Graphics card: SAPPHIRE - Radeon RX VEGA 64 Nitro+ - 8 Go

Blender Version
Broken: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449, type: Release
build date: 2019-07-29, 17:17:04
Worked: (optional)

Short description of error
Hello, I'm using Blender on Fedora 30 and I can't get the pen pressure to work on a Wacom Intuos 5S. The pen pressure works with both Gimp and Krita. In debug mode, Blender seems to interpret the pen as a mouse rather than a stylus — there are two mouse pointers on my screen, when I'm using the tablet's pen. The problem is still there on Ubuntu 19.04, on the daily builds, snap version and official release.

wm_event_do_handlers: Handling event
wmEvent  type:1 / LEFTMOUSE, val:2 / RELEASE,
         shift:0, ctrl:0, alt:0, oskey:0, keymodifier:0,
         mouse:(525,742), ascii:'', utf8:'', keymap_idname:(null), pointer:0x7f2e18948488

wm_event_do_handlers: Handling event
wmEvent  type:260 / WINDOW_DEACTIVATE, val:2 / RELEASE,
         shift:0, ctrl:0, alt:0, oskey:0, keymodifier:0,
         mouse:(-5,48), ascii:'', utf8:'', keymap_idname:(null), pointer:0x7f2e18948988

I'm not sure if it helps, but I included the system-info.txt generated by Blender and the results of

xinput list 

and

xinput list --long

xinput_list_--long.txt

xinput.txt

system-info.txt

Thanks a lot !

Exact steps for others to reproduce the error
Launch Blender, switch to sculpt mode, sculpt with the tablet (normally or with dyntopo enabled).

**System Information** Operating system: Fedora 30 (5.1.20-300.fc30.x86_64) Graphics card: SAPPHIRE - Radeon RX VEGA 64 Nitro+ - 8 Go **Blender Version** Broken: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f54494e, type: Release build date: 2019-07-29, 17:17:04 Worked: (optional) **Short description of error** Hello, I'm using Blender on Fedora 30 and I can't get the pen pressure to work on a Wacom Intuos 5S. The pen pressure works with both Gimp and Krita. In debug mode, Blender seems to interpret the pen as a mouse rather than a stylus — there are two mouse pointers on my screen, when I'm using the tablet's pen. The problem is still there on Ubuntu 19.04, on the daily builds, snap version and official release. ``` wm_event_do_handlers: Handling event wmEvent type:1 / LEFTMOUSE, val:2 / RELEASE, shift:0, ctrl:0, alt:0, oskey:0, keymodifier:0, mouse:(525,742), ascii:'', utf8:'', keymap_idname:(null), pointer:0x7f2e18948488 wm_event_do_handlers: Handling event wmEvent type:260 / WINDOW_DEACTIVATE, val:2 / RELEASE, shift:0, ctrl:0, alt:0, oskey:0, keymodifier:0, mouse:(-5,48), ascii:'', utf8:'', keymap_idname:(null), pointer:0x7f2e18948988 ``` I'm not sure if it helps, but I included the system-info.txt generated by Blender and the results of ``` xinput list ``` and ``` xinput list --long ``` [xinput_list_--long.txt](https://archive.blender.org/developer/F7642014/xinput_list_--long.txt) [xinput.txt](https://archive.blender.org/developer/F7642013/xinput.txt) [system-info.txt](https://archive.blender.org/developer/F7642012/system-info.txt) Thanks a lot ! **Exact steps for others to reproduce the error** Launch Blender, switch to sculpt mode, sculpt with the tablet (normally or with dyntopo enabled).
Author

Added subscriber: @MartinLouette

Added subscriber: @MartinLouette

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sebastian Parborg self-assigned this 2019-08-02 10:29:05 +02:00

Your build is missing libXi (Xinput). Install libXi dev package and recompile blender. We have added a fatal warning about this, so if you try to build and are missing libXi with the latest master, it will error out.

Your build is missing libXi (Xinput). Install libXi dev package and recompile blender. We have added a fatal warning about this, so if you try to build and are missing libXi with the latest master, it will error out.

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

As far as I can tell this is using the official 2.80 release, not a custom build?

As far as I can tell this is using the official 2.80 release, not a custom build?

Yepp, my bad. I didn't read all the text...

Yepp, my bad. I didn't read all the text...

@brecht this is running wayland. I'm guessing the QT and GTK (Krita and GIMP) have working tablet support in wayland.

As you can see from the output, xinput do not see the tablet.

@brecht this is running wayland. I'm guessing the QT and GTK (Krita and GIMP) have working tablet support in wayland. As you can see from the output, xinput do not see the tablet.

I see xwayland-stylus and xwayland-eraser in the list, that's the tablet pen.

I see `xwayland-stylus` and `xwayland-eraser` in the list, that's the tablet pen.

I should rephrase, xinput does not see the tablet as a wacom tablet.
I guess that we can just add teh xwayland generic tablet names to our white list. I can try to take care of this as I run wayland too.

I should rephrase, xinput does not see the tablet as a wacom tablet. I guess that we can just add teh xwayland generic tablet names to our white list. I can try to take care of this as I run wayland too.

I've posted a fix here: D5401

I've posted a fix here: [D5401](https://archive.blender.org/developer/D5401)

This issue was referenced by 369ffbd911

This issue was referenced by 369ffbd911c1957c83fa58ba2491cc578179ce2f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68073
No description provided.